--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     project:
       name: GraphWalker/graphwalker-project
       description: Build submitted via Travis CI
-    notification_email: bence.kiss0218@gmail.com
+    notification_email: nils.olsson@arcticblue.se
     build_command: mvn clean compile -DskipTests=true
     branch_pattern: coverity_scan
 before_install:
